--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ pandas
 numpy
 joblib
 matplotlib
-scikit-learn==1.4.2.post1
-imbalanced-learn==0.12.0
+scikit-learn==1.5.1
+imbalanced-learn==0.12.2
+openpyxl
